# facetwork

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  claude.md  conftest.py  docker-compose.dev.yml  docker-compose.mirror.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
afl/: __init__.py  ast.py  config.py  emitter.py  parser.py  preprocess.py  resolver.py  transformer.py  validator.py
afl/dashboard/: app.py  dependencies.py  filters.py  graph.py  helpers.py
afl/grammar/: afl.lark
afl/mcp/: server.py
afl/runtime/: __init__.py  agent_poller.py  block.py  continuation.py  dependency.py  dispatcher.py  entities.py  evaluator.py  expression.py  memory_store.py  mongo_store.py  persistence.py  registry_runner.py  runner_config.py  script_executor.py  storage.py  submit.py  types.py
agent-spec/: README.md  agent-sdk.agent-spec.yaml  facetwork.agent-spec.yaml  ffl-compiler.agent-spec.yaml  ffl-language.agent-spec.yaml  manifest-schema.agent-spec.yaml  runtime-distributed.agent-spec.yaml  runtime.agent-spec.yaml  storage.agent-spec.yaml
agents/protocol/: README.md  constants.json
agents/templates/: CLAUDE.md  README.md
docker/: Dockerfile.agent  Dockerfile.aws-lambda  Dockerfile.dashboard  Dockerfile.mcp  Dockerfile.noaa-weather  Dockerfile.osm-geocoder  Dockerfile.osm-geocoder-lite  Dockerfile.runner  Dockerfile.seed  README.md
docker/agents/: addone_agent.py
docker/postgis-init/: 01-pgrouting.sh
docker/seed/: seed.py
docs/: PROJECT_JOURNEY.md  architecture.md  beginners-guide.md  deployment.md  lessons-learned.md
docs/architecture/: lessons-learned.md  llm-ffl-fluency.md  mcp-workflow-surfacing.md  overview.md  project-journey.md
docs/contributing/: README.md  changelog.md  self-assessment.md  testing.md
docs/getting-started/: README.md  beginners-guide.md  tutorial.md
docs/guides/: llm-integration.md  long-running-handlers.md
docs/operations/: deployment.md
docs/reference/: agent-sdk.md  cli.md  compiler.md  database.md  event-system.md  examples.md  execution-traces.md  nonfunctional.md  overview.md  runtime-impl.md  runtime.md  state-system.md
docs/thesis/: ai-authorship.md  defense.md  future-thoughts-ai-native.md  future-thoughts-positioning-dissent.md  thesis.md
examples/: README.md
examples/aws-lambda/: README.md  USER_GUIDE.md  agent.py
examples/census-us/: USER_GUIDE.md  census-us.json
examples/continental-lz/: README.md  USER_GUIDE.md  agent.py
examples/data-quality-pipeline/: USER_GUIDE.md  conftest.py  requirements.txt
examples/devops-deploy/: README.md  agent.py  agent_registry.py
examples/doc-processing/: agent.py  agent_registry.py  conftest.py
facetwork/: __init__.py  ast.py  ast_utils.py  cli.py  config.py  emitter.py  loader.py  logging.py  parser.py  preprocess.py  publisher.py  resolver.py  source.py  transformer.py  validator.py
scripts/: _env.sh  _remote.sh  add-local  build-cache-index.py  build-cache-index.sh  check-databases  check-doc-links  compile  dashboard  db-stats  dockerup-dev  drain-runners  drop-collections  easy-local.sh  install  install-tools  list-runners  mcp-server  postgis-drop-tables  postgis-kill-vacuum  postgis-tune  postgis-vacuum  postgis-vacuum-status  publish  reboot  repair-workflow  rolling-deploy  run-workflow  runner  seed-examples  server  setup  start-grafana  start-import-pg  start-runner  start_mongo  start_postgres  stop-dashboard  stop-runners  stop_mongo
spec/: 10_language.md  11_semantics.md  12_validation.md  20_compiler.md  30_runtime.md  31_runtime_impl.md  60_agent_sdk.md  75_execution_traces.md  90_nonfunctional.md  95_self_assessment.md  99_changelog.md  README.md
tests/: test_ast_utils.py  test_cli.py  test_config.py  test_emitter.py  test_entry_points.py  test_lifecycle_integration.py  test_loader.py  test_logging.py  test_parser.py  test_preprocess.py  test_publisher.py  test_resolver.py  test_runner_main.py  test_source.py  test_validator.py
(+1001 files in other folders)
